# midnight-rust

./: .fdignore  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.cargo/: config.toml
src/: lib.rs
src/base/: application.rs  application_error.rs  mod.rs
src/base/loop/: continuous.rs  mod.rs
src/components/: diag_component.rs  graphic_displayer.rs  mod.rs  transform.rs
src/diag/: mod.rs
src/ecs/: domain.rs  mod.rs  system.rs
src/ecs/component/: any_component.rs  component_entry.rs  component_ref.rs  components.rs  mod.rs
src/ecs/component/containers/: mod.rs  (+2 more)
src/ecs/entity/: entities.rs  entities_iter.rs  entity_builder.rs  mod.rs
src/ecs/system/: mod.rs  system_interface.rs
src/entities/: diag_entity.rs  mod.rs
src/input/: keyboard.rs  mod.rs
src/math/: matrix4x4.rs  mod.rs  vector2.rs
src/math/geometry/: mod.rs
src/rendering/: color.rs  draw_batcher.rs  draw_batcher_error.rs  draw_config.rs  graphic_adapter.rs  graphic_adapter_init_error.rs  mod.rs  render_state.rs  render_state_error.rs  texture.rs  texture_error.rs  vertex.rs
src/rendering/backend/: draw_command.rs  draw_error.rs  execution_context.rs  graphic_backend.rs  graphic_backend_init_error.rs  hal.rs  hal_initialize_error.rs  mod.rs  old  pass_error.rs  presentation_surface_error.rs  render_backend.rs  render_backend_build_error.rs  render_backend_builder.rs  render_backend_init_error.rs  render_backend_operation_error.rs  render_pass.rs  render_presentation_surface.rs
src/rendering/batchers/: draw_batcher.rs  draw_batcher_error.rs  mod.rs
src/rendering/draw_config/: draw_config.rs  mod.rs  shader_config.rs  texture_config.rs
src/rendering/fonts/: font_rendering.rs  glyph.rs  mod.rs  mtsdf_font_rendering.rs  text_render_data.rs
src/rendering/graphics/: graphic_draw_error.rs  grid.rs  image.rs  mod.rs  rectangle.rs  text.rs  tilemap.rs  triangle.rs
src/rendering/shaders/: bindings.rs  bindings_descriptor.rs  descriptor.rs  descriptor_error.rs  macros.rs  mod.rs  raw_data.rs  shader.rs  shader_stage.rs  stage_kind.rs  uniforms.rs  vertex_attribute.rs
src/rendering/vertex/: mod.rs
src/resources/: asset.rs  error.rs  loader.rs  mod.rs  resource_group.rs
src/systems/: diag_system.rs  mod.rs  render_system.rs  update_system.rs
src/systems/render_system/: default_shader.rs  mod.rs
src/time/: mod.rs
src/ui/: frame.rs  mod.rs  ui_graphic.rs
src/util/: mod.rs  size.rs
src/window/: mod.rs  window_error.rs
(+55 files in other folders)
