[package]
name = "raven"
version = "0.1.0"
edition = "2021"

#[workspace]
#members = ["raven-proc"]

[features]
default = ["shader-shaderc", "shader-wgsl"]

shader-naga = ["dep:naga"]
shader-shaderc = ["dep:shaderc"]
shader-wgsl = ["wgpu/wgsl"]

[dependencies]
num-traits = "0.2.15"
winit = "0.28.3"
wgpu = { version = "0.15.1", features = ["spirv"] }
pollster = "0.3.0"
naga = { version = "0.11.0", features = ["glsl-in", "spv-out"], optional = true }
shaderc = { version = "0.8.2", optional = true }
bitflags = "2.0.2"
raw-window-handle = "0.5.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
image = { version = "0.24.6", features = ["png"] }
async-executor = "1.5.1"
futures-lite = "1.13.0"
