[package]
name = "raven"
version = "0.1.0"
edition = "2021"

#[workspace]
#members = ["raven-proc"]

[features]
default = ["shader-wgsl"]

shader-naga = ["dep:naga"]
shader-shaderc = ["dep:shaderc"]
shader-wgsl = ["wgpu/wgsl"]

[dependencies]
# window
winit = "0.28.3"
raw-window-handle = "0.5.1"

# gpu
wgpu = { version = "0.15.1", features = ["spirv"] }

# image processing
image = { version = "0.24.6", features = ["png"] }

# shader compilation
naga = { version = "0.11.0", features = ["glsl-in", "spv-out"], optional = true }
shaderc = { version = "0.8.2", optional = true }

# async and futures
pollster = "0.3.0"
async-executor = "1.5.1"
futures-lite = "1.13.0"

# error helpers
thiserror = "1.0.40"
miette = "5.9.0"

# utilities
num-traits = "0.2.15"
bitflags = "2.0.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
